Code changes for chapter 6 to 9

--- a/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\EmployeeManagementModels\EmployeeManagementModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
