--- a/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AshishComponents\AshishComponents.csproj" />
     <ProjectReference Include="..\EmployeeManagementModels\EmployeeManagementModels.csproj" />
   </ItemGroup>
 
